--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: 'Avenir', 'Avenir Next', -apple-system, BlinkMacSystemFont, 'Segoe UI', system-ui, sans-serif;
-    background-color:  #00253B; 
+    /* background-color:  #00253B; */
     color: #ffffff;
     line-height: 1.5;
     overflow-x: hidden;
