--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,13 @@
   box-sizing: inherit;
 }
 
-iframe {
-  overflow-y: hidden;
-  /* Optional: Remove border and set display */
-  border: none;
-  display: block;
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  overflow-y: hidden; /* Prevent vertical scroll */
 }
 
 /* Set the root box model */
@@ -20,8 +22,7 @@ html {
   box-sizing: border-box;
   width: 100%;
   min-height: 100%;
-  overflow-x: hidden;
-  overflow-y: hidden;
+
 }
 
 body {
@@ -33,21 +34,17 @@ body {
   color: #ffffff;
   line-height: 1.5;
   background-color: #00253B; /* re-enabled */
-  padding: 0;
-  margin: 0;
   display: flex;
   flex-direction: column;
 }
 
 /* Main content */
 main {
-  background-color: blue;
-  padding: 4rem 0;
-  width: 100%;
-  flex-grow: 1;
+  width: 100vw;
+  min-height: 100vh;
+  box-sizing: border-box;
+  overflow: hidden;
 }
-
-
 
 .container {
     margin: 0 auto;
