added INNOVATIONS and pages folder

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
 }
 
 html, body {
+  box-sizing: border-box;
   width: 100%;
   height: 100%;
   margin: 0;
@@ -35,8 +36,8 @@ main {
 .container {
     margin: 0 auto;
     padding: 0 1rem;
+    background-color: #00253B; /* re-enabled */
 }
-
 
 /* Navigation */
 .navigation {
